test_src/compiler_errors/types/binary/RightShiftFloatError4.b
class RightShiftFloatError4 {
    void test() {
        Double value = 14.0;
        println(value >>= 6);
    }
}
